# embedded_based_on_stm32

./: .gitignore  02.RCC时钟模块.md  04.EXTI外部中断模块.md  05.RTC定时器模块.md  06.DAC模块.md  07.ADC模块.md  09.SPI通讯模块.md  12.Watchdog看门狗模块.md  13.DMA模块.md  14.SDIO接口模块.md  18.USB模块和协议.md  21.启动流程和IAP应用.md  24.ETH模块和构建LWIP应用.md  README.md  readme_file.py
app/: 00-logger_tools.md  07-display_alarm_clock.md
app/doc/: app.drawio
code/: build.bat  delete_invalid.py
code/00-Drivers/: drv_adc.c  drv_adc.h  drv_alg.c  drv_alg.h  drv_can.c  drv_can.h  drv_dac.c  drv_dac.h  drv_dma.c  drv_dma.h  drv_exti.c  drv_exti.h  drv_flash.c  drv_flash.h  drv_global.h  drv_gpio.c  drv_gpio.h  drv_i2c.c  drv_i2c.h  drv_i2c_ap3216.c  drv_i2c_ap3216.h  drv_i2c_ds3213.c  drv_i2c_gt911.c  drv_i2c_gt911.h  drv_i2c_pcf8563.c  drv_i2c_pcf8563.h  drv_i2c_pcf8574.c  drv_i2c_pcf8574.h  drv_lcd.c  drv_lcd.h  drv_rtc.c  drv_rtc.h  drv_sdio.c  drv_sdio.h  drv_sdram.c  drv_sdram.h  drv_soft_i2c.c  drv_soft_i2c.h  drv_soft_spi.c  drv_soft_spi.h  (+17 more)
code/00-DriversChip/: drv_hx711.c  drv_hx711.h  drv_i2c_ap3216.c  drv_i2c_ap3216.h  drv_i2c_ds3213.c  drv_i2c_ds3213.h  drv_i2c_gt911.c  drv_i2c_gt911.h  drv_i2c_pcf8563.c  drv_i2c_pcf8563.h  drv_i2c_pcf8574.c  drv_i2c_pcf8574.h  drv_spi_adxl345.c  drv_spi_adxl345.h  drv_spi_wq.c  drv_spi_wq.h
code/00-Extend_Library/: startup_stm32f429xx.s
code/17-2-STM32F429_FreeRTOS_CubeMX/: .mxproject  STM32F429.ioc
code/22-STM32F429_RTThread_Nano/: .mxproject  rtthread-nano.ioc
code/27-2.STM32F429_CMAKE_GCC/: CMakeLists.txt  Makefile
code/27.STM32F429_GCC/: Makefile
code/28-STM32F429_CPP/: Makefile
code/29-2.STM32F429_Makefile/: Makefile
code/29-2.STM32F429_Makefile_Self/: Makefile  stm32f429_gcc.ld
code/30.STM32F429_CMake/: CMakeLists.txt
code/31-STM32F429_RUST/: README.md
code/x5.STM32F429_CMAKE_GCC/: CMakeLists.txt
code/x5.STM32F429_CMAKE_GCC/application/: main.c
src/: ch01.overview_and_kernel.md  ch02.rcc_system_clock.md  ch03.gpio_input_output.md  ch04.exti_interrupt.md  ch05.usart_com.md  ch06.rtc_clock.md  ch07.dac_output.md  ch08.adc_input.md  ch08.usart_com.md  ch09.spi_com.md  ch10.i2c_com.md  ch11.timer_clock.md  ch12.watchdog_monitor.md  ch13.dma.md  ch14.sdio_interface.md  ch15.can_interface.md  ch15.fmc_interface.md  ch15.fsmc_interface.md  ch16.algorithm.md  ch16.can_interface.md  ch17.rtos_freertos.md  ch17.usb_interface_protocol.md  ch17.usb_slave.md  ch18.dcmi_interface.md  ch18.eth_lwip.md  ch18.rtos_rtthread.md  ch18.usb_host.md  ch19.algorithm.md  ch19.eth_lwip.md  ch19.fmc_sdram.md  ch19.rtos_normal.md  ch20.algorithm.md  ch20.dcmi_interface.md  ch20.flash_manage.md  ch20.lower_power.md  ch20.storage_used.md  ch21.eth_lwip.md  ch21.lower_power.md  ch21.rtos_freertos.md  ch21.rtos_normal.md  (+48 more)
(+428 files in other folders)
